# Spritoglobin-DX

./: README.md  pyproject.toml  requirements.txt  run.bat  spritoglobin_dx.nuitka-package.config.yml
.github/workflows/: build.yml
spritoglobin/: __init__.py  __main__.py  classes.py  constants.py  main.py  scripts.py
spritoglobin/lang/: en_US.ts
spritoglobin_dx/: __init__.py  __main__.py  classes.py  constants.py  main.py  scripts.py
spritoglobin_dx/lang/: en_US.qm  en_US.ts
